2004-08-30  Pawel Salek

	* libbalsa/imap-server.[hc]: some infrastructure for server bugs
	workarounds (I do not really want to go there...)
	* libbalsa/mailbox{,_local}.c: move _release_message() from
	LibBalsaMailboxLocal to LibBalsaMailbox
	* libbalsa/mailbox_imap.c: reuse full message cache better.
	* src/{mailbox,folder}-conf.c: configure server bug workarounds.

2004-08-28  Pawel Salek

	* libbalsa/send.c: fix calls to smtp_header_set_option()
	(wrong since 2001-05-22).
	* libbalsa/address-book-gpe.c: handle MODIFIED tag.

2004-08-28  Pawel Salek

	* NEWS, configure.in: release 2.2.4
	* libbalsa/address-book-gpe.c: handle entries without addresses.
	* libbalsa/imap/imap-handle.c: cleanup.

2004-08-27  Pawel Salek

	* libbalsa/address-book-gpe.c: port fixes.
	* libbalsa/imap-server.h: remove dependency on libimap.h
	* libbalsa/mailbox_{imap,pop3}.[hc]: simplify API slightly.
	* libbalsa/send.c: send via smtp service by default.
	* libinit_balsa/balsa-druid-page-{directory,finish,user,welcome}.[hc]:
	new wizard.
	* libinit_balsa/helper.[hc]: implement add_table_option and checkbox.
	* src/print.c: set the parent of the warning window.

2004-08-27 08:22  PeterB

	* libbalsa/mailbox_mbox.c: clear unread message count when clearing
	the mailbox.

2004-08-26 16:48  PeterB

	* libbalsa/body.c, src/balsa-message.c: default content-disposition
	for text/plain is in-line; implement add_multipart_digest; both
	changes needed to display complete digests.
	* libbalsa/: mailbox_imap.c, mailbox_imap.h: use "imap://..." url
	even when server->use_ssl is set.
	* libbalsa/mailbox_mbox.c: be a little more careful when parsing.
	* src/balsa-index.c: re-expand thread when a message is added, if
	balsa_app.expand_tree is set; code for
	balsa_app.expand_to_new_unread in place but disabled.

2004-08-23 23:04  Pawel Salek

	* libbalsa/imap/imap-{commands,search}.c:Debian report #266298.
	* src/main-window.c: 
	* src/sendmsg-window.c: fix misspellings pointed out by Kelemen Gábor.